[package]
name = "nbd"
version = "0.1.0"
authors = ["Vitaly \"_Vi\" Shukela <vi0oss@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/rust-nbd"
description = "Rust library for NBD (network block device) servers. Maybe clients, someday later..."
keywords = ["nbd", "network-block-device"]
categories = ["network-programming"]
readme = "README.md"


[dependencies]
byteorder = "1.2"
