[package]
name = "nbd"
version = "0.2.2"
authors = ["Vitaly \"_Vi\" Shukela <vi0oss@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/rust-nbd"
description = "Rust library for NBD (network block device) servers and clients."
keywords = ["nbd", "network-block-device"]
categories = ["network-programming"]
readme = "README.md"


[dependencies]
byteorder = "1.0"

[dev-dependencies]
proptest = "0.8.4"
rand = "0.5.5"
readwrite = "0.1.0"
pipe = "0.0.3"
